# xapitodict

./: .gitignore  CHANGELOG  README.md  pyproject.toml  setup.py
xapitodict/: __init__.py  lib.py
xapitodict/cmd/: __init__.py  xapitojson.py  xapitosql.py
